--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,11 @@ buildscript {
         kotlinVersion = '1.3.72'
         ktlintVersion = '0.30.0'
         ktxVersion = '1.0.2'
-        lifecycleVersion = '2.2.0-alpha02'
+        lifecycleVersion = '2.2.0'
         materialVersion = '1.2.0-alpha03'
         navigationVersion = '2.0.0'
         recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.2.0-alpha01'
+        roomVersion = '2.2.0-alpha02'
         workVersion = '2.1.0'
         pagingVersion = '2.1.0'
         gsonVersion = '2.8.2'
