--- a/build.gradle
+++ b/build.gradle
@@ -2,50 +2,31 @@ buildscript {
     // Define versions in a single place
     ext {
         // Sdk and tools
-        compileSdkVersion = 28
+        compileSdkVersion = 30
         minSdkVersion = 21
-        targetSdkVersion = 28
+        targetSdkVersion = 30
+        buildToolsVersion = "30.0.2"
 
         // App dependencies
-        appCompatVersion = '1.1.0-beta01'
-        constraintLayoutVersion = '2.0.0-beta1'
-        coroutinesVersion = "1.3.0-RC"
-        fragmentVersion = '1.1.0-alpha09'
-        glideVersion = '4.9.0'
-        gradleVersion = '3.5.0'
-        kotlinVersion = '1.3.72'
-        ktlintVersion = '0.30.0'
-        ktxVersion = '1.0.2'
+        kotlinVersion = "1.3.72"
+        ktxVersion = "1.3.1"
+        activityKtxVersion = "1.1.0"
+        gradleVersion = "4.1.0-rc01"
+        appCompatVersion = "1.2.0"
+        materialVersion = "1.2.0"
+        constraintLayoutVersion = "2.0.1"
+        navigationVersion = '2.3.0'
         lifecycleVersion = '2.2.0'
-        materialVersion = '1.2.0-alpha03'
-        navigationVersion = '2.0.0'
-        recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.2.0-alpha02'
-        workVersion = '2.1.0'
-        pagingVersion = '2.1.0'
-        gsonVersion = '2.8.2'
-        okhttp = '3.10.0'
+        daggerVersion = '2.28.3'
+        glideVersion = '4.9.0'
+        hiltVersion = '2.28-alpha'
+        hiltCompilerVersion = '1.0.0-alpha01'
+        hiltLifecycleVersion = '1.0.0-alpha02'
+        gsonVersion = '2.8.6'
+        okhttp = '3.12.3'
         retrofit = '2.9.0'
-        stetho = '1.5.1'
+        roomVersion = '2.2.0-alpha02'
         timberVersion = '4.7.1'
-        daggerVersion = '2.23.2'
-
-        // Testing dependencies
-        junitVersion = '4.12'
-        espressoVersion = '3.1.1'
-        coreTestingVersion = '2.0.0'
-        jacocoVersion = '0.8.4'
-        runnerVersion = '1.0.1'
-        testExtJunit = '1.1.0'
-        uiAutomatorVersion = '2.2.0'
-        mockitoVersion = "2.25.0"
-        mockitoAllVersion = "1.10.19"
-        mockitoAndroidVersion = "2.25.0"
-        mockwebserverVersion = "3.8.1"
-        testCoreVersion = "1.1.0"
-        testRunnerVersion = "1.1.1"
-        testRulesVersion = "1.1.1"
-
     }
 
     repositories {
@@ -58,6 +39,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
     }
 }
 
