--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         hiltVersion = '2.28-alpha'
         hiltCompilerVersion = '1.0.0-alpha01'
         hiltLifecycleVersion = '1.0.0-alpha02'
+        hiltWorkerVersion = '1.0.0-alpha01'
         gsonVersion = '2.8.6'
         okhttp = '3.12.3'
         retrofit = '2.9.0'
@@ -31,6 +32,7 @@ buildscript {
         authVersion = '19.4.0'
         googleAuthVersion = '18.1.0'
         coroutinesPlayVersion = '1.1.1'
+        workManagerVersion = '2.4.0'
     }
 
     repositories {
