UI is migrated to neumorphism design

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,6 @@ dependencies {
 
     // Work Manager
     implementation "androidx.work:work-runtime-ktx:$workManagerVersion"
+
+    implementation 'com.github.fornewid:neumorphism:0.2.1'
 }
